--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,13 @@
     font-size: 15px;
     min-height: 100vh;
     width: 100vw;
+    @media (min-width: 1024px) {
+      height: 100vh;
+    }
+  }
+  .main-content {
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
